feat: 배포용 환경변수, 하드코딩 제거. fix: 백엔드 디렉터리 정리 및 참조 경로 전부 다 수정. (디렉터리 관리는 처음부터 잘 할것.)

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 		"doc": "docs"
 	},
 	"scripts": {
-		"dev": "concurrently -n BACK,FRONT -c yellow,cyan \"python -m uvicorn api.main:app --reload --port 8000\" \"npm --prefix client run dev\"",
-		"dev:back": "python -m uvicorn api.main:app --reload --port 8000",
+		"dev": "concurrently -n BACK,FRONT -c yellow,cyan \"python -m uvicorn backend.api.main:app --reload --port 8000\" \"npm --prefix client run dev\"",
+		"dev:back": "python -m uvicorn backend.api.main:app --reload --port 8000",
 		"dev:front": "npm --prefix client run dev",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -28,3 +28,4 @@
 		"concurrently": "^9.2.1"
 	}
 }
+
