--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_TITLE=EduTech Risk Prediction API
+﻿APP_TITLE=EduTech Risk Prediction API
 MODEL_PATH=models/logistic_model.joblib
 REPORT_DIR=reports/tables
 DUMMY_DATA_PATH=data/dummy/dummy_midterm_like_labeled.csv
 FRONTEND_DIST=client/dist
-ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
+ALLOWED_ORIGINS=http://localhost:5173,http://localhost:8000
